[package]
name = "rust-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = [ "derive" ] }
rmp = "0.8"
rmpv = "1.0"
rmp-serde = "1.1"
serde = { version = "1.0",  features = [ "derive" ] }
serde_bytes = "0.11"
serde_json = "1.0"
uuid = { version = "1.2", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
rand = "0.8"
log = "0.4"
env_logger = "0.9.1"